# ModelRelief

./: .dockerignore  .env  .eslintrc.json  .gitignore  .gitmodules  .pylintrc  MIT-LICENSE.txt  ModelRelief.code-workspace  ModelRelief.csproj  ModelRelief.sln  ProjectNotes.md  README.md  Startup.cs  ToDo.txt  development.txt  global.json.hidden  gulpfile.js  notes.txt  package-lock.json  package.json  q  requirements.development.conda.txt  requirements.development.pip.txt  requirements.development.txt  requirements.production.txt  tsconfig.json  web.config  web.config.production
.alm/: sessionsV2.json
DockerExperiments/: Dockerfile  app.py  docker-compose.yml
Explorer/: Explorer.pyproj  Explorer.ui  explorer.py  explorer.ui  explorer_rc.py  explorer_ui.py  widgets.py
Logs/: DevelopmentPythonInstallation.txt  baserequirements.txt
ModelRelief/: Clipboard.cs  GlobalSuppressions.cs  ModelRelief.code-workspace  ModelRelief.csproj  Program.cs  SLK.json  Startup.cs  ToDo.md  ToDo.txt  appsettings.Development.json  appsettings.Production.json  appsettings.ProductionBuild.json  appsettings.ProductionDeploy.json  appsettings.ProductionDocker.json  appsettings.ProductionIIS.json  appsettings.Test.json  appsettings.json  gulpfile.js  helloNode.js  package-lock.json  package.json  stylecop.json  tsconfig.json  tslint.json  webpack.config.js
ModelRelief.Test/: AutoRollbackAttribute.cs  ClassFixture.cs  DatabaseCollectionFixture.cs  GlobalSuppressions.cs  HttpMimeType.cs  HttpRequestType.cs  ModelRelief.Test.csproj  Models.cs  PasswordGrant.cs  RequestResponse.cs  ServerFramework.cs  Settings.cs  TestServerTests.cs  Utility.cs  appsettings.json  stylecop.json  xunit.runner.json
NodeWorkbench/: helloNode.js  promiseA.js  workbench.js
ProjectNotes/: Enhancements.md  Issues.md  Procedures.md  ProjectNotes.md  TaskList.md  TechnicalNotes.md  markdown.css
Relief/: .gitignore  CMakeLists.txt  Relief.pyproj  Relief.vcxproj  Relief.vcxproj.filters  relief.cp36-win_amd64.pyd  relieftest.py  setup.py
Relief/reports/results/: Test_ReliefTest_2018-09-05_11-07-28.html
Relief/src/: GaussianFilter.cpp  GaussianFilter.h  GaussianKernel.cpp  GaussianKernel.h  ModelRelief.cpp  ModelRelief.h  StopWatch.cpp  StopWatch.h  bindings.cpp  relief.cpp  relief.h
Relief/tests/: relief_test.py
Relief/tests/c++/: GaussianKernelTests.cpp
Relief/tests/python/: Benchmark.xlsx  benchmark.py  relief_test.py  relieftest.py
ReliefSetup/: ReliefSetup.pyproj  relieftest.py
ReliefTest/: ReliefPythonDebug.pyproj  ReliefTest.pyproj  relieftest.py
Services/: Greeter.cs
Solver/: .pylintrc  CompileUI.bat  DockerFile.pythonbase  Dockerfile.solver  Explorer.ui  Multiplier.py  Scalar.py  Solver - Copy.py  Solver.py  Solver.pyproj  amg.py  attenuation.py  camera.py  camerafactory.py  depth.py  depthbuffer.py  difference.py  experiments.py  explorer.py  explorer.qrc  explorer_ui.py  filemanager.py  gradient.py  hellosolver.py  image.py  imagetransform.py  integrator.py  logger.py  mask.py  mathtools.py  mesh.py  meshscale.py  meshtransform.py  normalmap.py  objwriter.py  orthographiccamera.py  perspectivecamera.py  poisson.py  requirements.txt  results.py  (+9 more)
Source/: Greeter.cs  Startup.cs
Tools/: Auth0Grant.bat  Auth0Grant.sh  Auth0Query.bat  Auth0Query.sh  Baseline.py  BindPythonEnvironment.sh  BuildPythonEnvironment.bat  ColorTest.py  DeleteConfiguration.bat  DotNetPID.ps1  Environment.py  GitBash.bat  ModelReliefShell.bat  ModelReliefShell.sh  NginxEnvironment.sh  SetAnacondaPath.bat  SetMinGWPath.bat  StartModelRelief.sh  Temp.bat  TestDatabaseBaseline.py  Tools.py  (+19 more)
(+1166 files in other folders)
